Corrected alignment of the add files button

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -28,10 +28,6 @@
     border-width: 2px;
 }
 
-#addComment{
-    text-align: center;
-}
-
 .Absolute-Center {
     margin: auto;
     position: absolute;
@@ -491,6 +487,9 @@ td {
 .theIssue{
     padding: 10px;
     
+}
+.centerButtonPanel {
+    text-align: center;
 }
 
 /*view an issue /edit*/
